Added new employee

--- a/about-us.html
+++ b/about-us.html
@@ -180,6 +180,32 @@
         </p><p>
         </p>
       </section>
+      <section>
+        <h2>Chad Briggs, Clinician</h2>
+        <img class="headshot" src="images/ChadBriggsPic.jpg" alt="Picture of Chad Briggs">
+        <p>
+          Chad Briggs is a first generation college graduate from a small agricultural community in the
+          heart of central Pennsylvania. He completed Bachelors of Science degree in Psychology at Penn
+          State University in 2006. He attended  graduate school at Shippensburg and completed his
+          Masters of Social work in 2017. Chad became a Licensed Social Worker in February of 2019. He
+          has a large background of work experience in the areas of child welfare and inpatient mental
+          health treatment. Chad is an advocate for mental health and wellness and reducing the stigma
+          of receiving mental health treatment.
+        </p><p>
+          Chad has a strong focus on helping children and families to identify therapeutic needs and
+          working collaboratively on finding solutions through the use of CBT, mindfulness, and Narrative
+          based approaches. He also has a strong interest in the area of trauma, it's subjectivity, and
+          it's effects on development and perception
+        </p><p>
+          Chad spends his free time at home attempting to be an amateur landscaper, hiking, watching
+          movies, or enjoying live music. He's also a wanna be foodie so he's always looking for unique
+          and creative cuisine. Chad also has a passion for the performing arts and has done live theater
+          for many years including several dinner theater shows. He is a self professed game show lover
+          and enjoys watching and participating in trivia shows. Chad has tried out for both Teen
+          Jeopardy and Who Wants to Be A Millionaire. Sadly he didn't make it past the initial round but
+          that hasn't stopped him from continuing to try.
+        </p>
+      </section>
     </div>
   </main>
   <footer class="footer bg-light">
