--- a/about-us.html
+++ b/about-us.html
@@ -173,11 +173,22 @@
           In her spare time, she enjoys photography, being outside and spending time with family.
         </p>
       </section>
-      <section class="hidden">
+      <section>
         <h2>Selene Scavitto, Clinician</h2>
         <img class="headshot" src="images/SeleneScavitto.jpg" alt="Picture of Selene Scavito">
         <p>
+          Selene graduated from Shippensburg University with her MSW and currently is a LSW. Selene has
+          experience working in a variety of settings including as Director of Social Services at a
+          Continuing Care Retirement Community, hospital setting, and outpatient private practice. She
+          enjoys working with adolescents and adults, helping them find their way through life's
+          challenges, by teaching new ways to cope and setting realistic goals. She strives to offer a
+          non-judgmental, culturally sensitive environment conducive to exploration and growth.
         </p><p>
+          In her spare time, Selene enjoys spending time with her family and is active in raising
+          awareness of the mental health needs of military members and veterans. Selene coordinates
+          a yearly Ruck March which supports efforts in the fight against suicide. The March raises
+          funds for non-profit organizations that serve veterans and to raises awareness regarding the
+          prevalence of veteran suicide and mental health issues. 
         </p>
       </section>
       <section>
