new profile and paragraph spacing fix

--- a/about-us.html
+++ b/about-us.html
@@ -217,6 +217,33 @@
           that hasn't stopped him from continuing to try.
         </p>
       </section>
+      <section>
+        <h2>Rachel Mailey, Clinician</h2>
+        <!--img class="headshot" src="images/RachelMaileyPic.jpg" alt="Picture of Rachel Mailey"-->
+        <p>
+          Rachel Mailey graduated with her Master of Science (MS) in Counseling from Shippensburg 
+          University in 1998. She became a Licensed Professional Counselor in 2002, and has worked in a
+          variety of Mental Health settings over the past several years including small group counseling
+          practices, Community Mental Health agencies, and family and children's services. She has worked
+          as a bereavement counselor at a local Hospice and in the schools as a school-based counselor as
+          well.
+        </p><p>
+          Rachel has a strong interest in working with postpartum women, particularly those suffering with
+          Postpartum Depression, as well as a general interest in Grief and Loss work, including perinatal
+          loss. Rachel works with all age groups and most issues such as anxiety, depression, life
+          transitions, and marital issues. She provides Individual and Couples Counseling, and believes in
+          parental involvement in the therapeutic process when working with children. Rachel believes in
+          the power that each person has to make positive changes for themselves in their lives, and
+          recognizes that sometimes seeking professional guidance and support in an objective and non-
+          judgmental setting is necessary to promote growth. She recognizes that allowing oneself to be
+          vulnerable in a counseling setting is not an easy process but that the rewards can be tremendous.
+        </p><p>      
+          Rachel's pride and joy (and toughest job on the planet!) is raising her five children, with the
+          help of her husband. She is an active member of her local public school board and can be found
+          volunteering in the schools for a variety of activities. She loves to garden and read, and is
+          found most evenings running to, and attending, her children's sports, music and theater events.      
+        </p>
+      </section>
     </div>
   </main>
   <footer class="footer bg-light">
