new clinician picture

--- a/about-us.html
+++ b/about-us.html
@@ -219,7 +219,7 @@
       </section>
       <section>
         <h2>Rachel Mailey, Clinician</h2>
-        <!--img class="headshot" src="images/RachelMaileyPic.jpg" alt="Picture of Rachel Mailey"-->
+        <img class="headshot" src="images/RachelMaileyPic.jpg" alt="Picture of Rachel Mailey">
         <p>
           Rachel Mailey graduated with her Master of Science (MS) in Counseling from Shippensburg 
           University in 1998. She became a Licensed Professional Counselor in 2002, and has worked in a
