Added new employee

--- a/about-us.html
+++ b/about-us.html
@@ -244,6 +244,32 @@
           found most evenings running to, and attending, her children's sports, music and theater events.      
         </p>
       </section>
+      <section>
+        <h2>Katie Green, Clinician</h2>
+        <img class="headshot" src="images/KatieGreen.jpg" alt="Picture of Katie Green">
+        <p>
+          Kathleen (Katie) Green graduated from Shippensburg University in 2010 with her Bachelor of
+          Science in Psychology. In 2018 she obtained her Masters graduate degree in Social Work and
+          became a licensed social worker in February of 2019. 
+        </p><p>
+          Katie has clinical experience treating individuals, couples, families, and groups in multiple
+          behavioral health care settings over the past 10 years. She has had experience in such settings
+          as an inpatient psychiatric hospital, home care settings, and in the school setting. Her
+          experience in the inpatient psychiatric hospital has helped her develop an understanding and
+          sensitivity to the needs of vulnerable populations and is trained in cultural competency
+          awareness. She is sensitive of and affirming of individuals experiencing (LGBTQ+) gender
+          identity issues. Katie takes a holistic approach, viewing the client as the center of treatment
+          and recognizes that each individual’s journey is different and unique. Katie has received formal
+          training and has experience in various therapy processes such as Dialectical Behavioral Therapy,
+          Cognitive Behavioral Therapy, Interpersonal Therapy, and Family Therapies. She is able to take a
+          creative approach that endeavors to foster rapport, trust, empathy, and respect within the
+          therapeutic relationship.
+        </p><p>      
+          In her spare time, Katie enjoys traveling to different states and exploring national parks with
+          her family. She enjoys spending time with her dog, taking him for walks, and photography. When she
+          isn’t outside enjoying the fresh air, she can be found watching movies or attending live concerts.     
+        </p>
+      </section>
     </div>
   </main>
   <footer class="footer bg-light">
