updates for teletherapy

--- a/confidentiality.html
+++ b/confidentiality.html
@@ -21,6 +21,7 @@
       <div class="collapse navbar-collapse" id="navbar-main">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="teletherapy.html">Teletherapy</a></li>
           <li class="nav-item"><a class="nav-link" href="common-questions.html">Common Questions</a></li>
           <li class="nav-item active"><a class="nav-link" href="confidentiality.html">Confidentiality<span class="sr-only">(current)</span></a></li>
           <li class="nav-item"><a class="nav-link" href="rates-and-insurance.html">Rates and Insurance</a></li>
