--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!--
-  <meta name="keywords" content"counseling, therapist, psychologist, social work, couples, mental, marriage, family, grief, eating disorder, binge, anorexia, bulimia, cognitive behavioral therapy" />
+  <meta name="keywords" content"counseling, therapist, psychologist, social work, teletherapy, anxiety, couples, mental, marriage, family, grief, eating disorder, binge, anorexia, bulimia, cognitive behavioral therapy" />
   -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Northeastern Counseling Services provides cognitive behavior health therapy
@@ -25,6 +25,7 @@
       <div class="collapse navbar-collapse" id="navbar-main">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="teletherapy.html">Teletherapy</a></li>
           <li class="nav-item"><a class="nav-link" href="common-questions.html">Common Questions</a></li>
           <li class="nav-item"><a class="nav-link" href="confidentiality.html">Confidentiality</a></li>
           <li class="nav-item"><a class="nav-link" href="rates-and-insurance.html">Rates and Insurance</a></li>
@@ -37,6 +38,7 @@
   </header>
   <main>
     <div class="container">
+      <p class="announcement"><a href="teletherapy.html">We offer teletherapy! - Click for more details</a></p>
       <div class="jumbotron">
         <img class="img-fluid" src="images/400dpiLogo.png" alt="Trees"/>
         <h1>Northeastern Counseling Services</h1>
