--- a/eating-disorder-myths.html
+++ b/eating-disorder-myths.html
@@ -22,6 +22,7 @@
       <div class="collapse navbar-collapse" id="navbar-main">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
+          <li class="nav-item"><a class="nav-link" href="teletherapy.html">Teletherapy</a></li>
           <li class="nav-item"><a class="nav-link" href="common-questions.html">Common Questions</a></li>
           <li class="nav-item"><a class="nav-link" href="confidentiality.html">Confidentiality</a></li>
           <li class="nav-item"><a class="nav-link" href="rates-and-insurance.html">Rates and Insurance</a></li>
