Added informed consent and updated libraries

--- a/teletherapy.html
+++ b/teletherapy.html
@@ -5,9 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Northeastern Counseling Services offeres teletherapy when in office visits are not possible." />
-   <meta name="theme-color" content="#3AB34A">
-   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <meta name="theme-color" content="#3AB34A">
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="css/default.css"/>
   <title>Northeastern Counseling Services | Ellicott City, MD | Mechanicsburg, PA</title>
 </head>
@@ -34,6 +34,70 @@
   </header>
   <main>
     <div class="container">
+      <div class="modal fade" id="modalConsent" tabindex="-1" role="dialog" aria-labelledby="modalConsentTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="modalConsentTitle">Telehealth Informed Consent</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>
+                Telehealth involves the use of electronic communications to enable Northeastern Counseling Services clinicians to connect with individuals using live
+                interactive video and audio communications. Telehealth includes the practice of psychological health care delivery, diagnosis, consultation, treatment,
+                referral to resources, education, and the transfer of medical and clinical data.
+              </p>
+              <ul style="list-style-type:none">
+                <li>
+                  I will be receiving mental health services through interactive videoconferencing. I understand the use of videoconferencing is an alternative method
+                  of mental health care delivery and that my therapist will not be physically in the same room with me.
+                </li>
+                <li>
+                  I understand that although Northeastern Counseling Services makes every effort to protect my privacy by using the Doxy.me secure platform, they cannot
+                  guarantee the security of any information I transmit to them over the Internet. By using telehealth services, I recognize that transmissions over the
+                  Internet are at my own risk and that third parties may unlawfully intercept or access the transmissions. 
+                </li>
+                <li>
+                  I also understand that despite reasonable efforts on the part of my therapist, there are risks and consequences in using telehealth services. The risks
+                  include, but are not limited to, the possibility that the transmission of sessions could be disrupted or distorted by technical failures. In case of
+                  technical failures, my therapist will make every effort to re-connect with me.
+                </li>
+                <li>
+                  I also understand that telehealth services may not be as complete as services provided via face-to-face, although, several benefits of telehealth
+                  services have been identified including increased access to specialized services in remote areas, lower healthcare costs, reduced travel, minimizing
+                  time off work, and decreased waiting time for services. I have also been notified that if my therapist believes I would be better served by another
+                  form of counseling services (e.g., face-to-face services), I will be referred to a therapist who can provide such services. Finally, I understand that
+                  there are potential risks and benefits associated with any form of mental health service and that, despite my efforts and the efforts of my therapist,
+                  my condition may not improve and in some cases may even get worse. 
+                </li>
+                <li>
+                  I understand that my participation in this is voluntary and I may decide to terminate my treatment at any time.                
+                </li>
+                <li>
+                  My privacy and confidentiality will be protected. I understand that there will be no recordings of my therapy sessions. I also agree to not record my
+                  own therapy sessions without my therapist's knowledge or permission.  
+                </li>
+                <li>
+                  Northeastern Counseling Services will bill insurance for telehealth services when these services have been determined to be covered by an individual’s
+                  insurance plan. The standard copay and/or deductibles would apply. In the event that my insurance does not cover telehealth, or I do not have 
+                  insurance, I have the option to pay out-of-pocket.
+                </li>
+              </ul>
+              <p>            
+                By clicking "Agree" below, I acknowledge I have read, understand and agree with the contents of this Telehealth Informed Consent agreement and give 
+                my consent to use teletherapy. I have also discussed any concerns with my therapist, and all of my questions have been answered to my satisfaction.
+              </p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Disagree</button>
+              <button type="button" class="btn btn-primary">Agree</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <h1>Teletherapy</h1>
       <section>
         <p>
@@ -49,15 +113,15 @@
           Clicking on one of the buttons below will redirect you to another website, and place you in the clinician's virtual waiting room.
         </p>
         <div class="wrapper">
-          <a class="box" href="https://doxy.me/nicolebennerrd" title="Virtual therapy link for Nicole Benner"><img alt="doxy" src="images/doxy.png"/>Nicole Benner</a>
-          <a class="box" href="https://doxy.me/chadbriggsncs" title="Virtual therapy link for Chad Briggs"><img alt="doxy" src="images/doxy.png"/>Chad Briggs</a>
-          <a class="box" href="https://doxy.me/meganclinencs" title="Virtual therapy link for Megan Cline"><img alt="doxy" src="images/doxy.png"/>Megan Cline</a>
-          <a class="box" href="https://doxy.me/jcorbinvirtualoffice" title="Virtual therapy link for James Corbin"><img alt="doxy" src="images/doxy.png"/>James Corbin</a>
-          <a class="box" href="https://doxy.me/ncs" title="Virtual therapy link for Katie Green"><img alt="doxy" src="images/doxy.png"/>Katie Green</a>
-          <a class="box" href="https://doxy.me/denisehaasncs" title="Virtual therapy link for Denise Haas"><img alt="doxy" src="images/doxy.png"/>Denise Haas</a>
-          <a class="box" href="https://doxy.me/rachelmailey" title="Virtual therapy link for Rachel Mailey"><img alt="doxy" src="images/doxy.png"/>Rachel Mailey</a>
-          <a class="box" href="https://doxy.me/selenescavittoncs" title="Virtual therapy link for Selene Scavitto"><img alt="doxy" src="images/doxy.png"/>Selene Scavitto</a>
-          <a class="box" href="https://doxy.me/northeasterncounselingservices" title="Virtual therapy link for Nicole Woods"><img alt="doxy" src="images/doxy.png"/>Nicole Woods</a>
+          <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/nicolebennerrd" title="Virtual therapy link for Nicole Benner"><img alt="doxy" src="images/doxy.png"/>Nicole Benner</a>
+          <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/chadbriggsncs" title="Virtual therapy link for Chad Briggs"><img alt="doxy" src="images/doxy.png"/>Chad Briggs</a>
+          <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/meganclinencs" title="Virtual therapy link for Megan Cline"><img alt="doxy" src="images/doxy.png"/>Megan Cline</a>
+          <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/jcorbinvirtualoffice" title="Virtual therapy link for James Corbin"><img alt="doxy" src="images/doxy.png"/>James Corbin</a>
+          <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/ncs" title="Virtual therapy link for Katie Green"><img alt="doxy" src="images/doxy.png"/>Katie Green</a>
+          <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/denisehaasncs" title="Virtual therapy link for Denise Haas"><img alt="doxy" src="images/doxy.png"/>Denise Haas</a>
+          <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/rachelmailey" title="Virtual therapy link for Rachel Mailey"><img alt="doxy" src="images/doxy.png"/>Rachel Mailey</a>
+          <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/selenescavittoncs" title="Virtual therapy link for Selene Scavitto"><img alt="doxy" src="images/doxy.png"/>Selene Scavitto</a>
+          <a class="box" data-toggle="modal" data-target="#modalConsent" href="https://doxy.me/northeasterncounselingservices" title="Virtual therapy link for Nicole Woods"><img alt="doxy" src="images/doxy.png"/>Nicole Woods</a>
         </div>
       </section>
       <section>
@@ -101,8 +165,16 @@
     </div>
   </footer>
   <!-- Latest compiled and minified JavaScript -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-</body>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <script>
+    $('#modalConsent').on('show.bs.modal', function (event) {
+      var anchor = $(event.relatedTarget);
+      var link = anchor.attr('href');
+      var modal = $(this);
+      modal.find('.modal-footer .btn-primary').click(function() { location.href=link; });
+    })    
+  </script>
+  </body>
 </html>
